Fixing camera preview img alignment

--- a/AcControl.Server/Pages/Cameras.razor.css
+++ b/AcControl.Server/Pages/Cameras.razor.css
@@ -35,6 +35,8 @@
 			grid-column: 1;
 			transition: transform .1s;
 			justify-self: stretch;
+			display: flex;
+			justify-content: center;
 		}
 
 			.devices > .device a.preview:hover {
